--- a/asadoo/TODO
+++ b/asadoo/TODO
@@ -28,3 +28,11 @@
 # Implement a basic (& configurable) logger
 
 # Custom deps management
+
+handler($request, $response, $deps) {
+    $deps->cache->set('foo', 'bar');
+
+    if(!$deps->auth || !$deps->auth->isLogged()) {
+        $response->setResponseCode(301);
+    }
+}
